<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1F1F1F">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="187dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:alpha="0"
        android:gravity="center"
        android:text="@string/mainPageText"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/real"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        android:contentDescription="@string/reallogo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/real" />

    <ImageButton
        android:id="@+id/santos"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginBottom="55dp"
        android:background="@color/black"
        android:contentDescription="@string/santoslogo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/santos" />

    <ImageButton
        android:id="@+id/fla"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        android:contentDescription="@string/flalogo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/logoutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fla" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>