<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/santosInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teams.SantosInfo"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/footbuddyLogo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/footbuddy_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/footbuddy" />

    <TextView
        android:id="@+id/foundationSantos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/foundationSantos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/santosLogo" />

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foundationSantos"
        app:layout_constraintVertical_bias="0.004">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green2"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/match_history"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5sp"
                android:text="Matches"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/santosMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:padding="5sp"
                android:text="Wins"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/santosWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:padding="5sp"
                android:text="Draws"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/santosDraws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="5sp"
                android:text="Loses"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/santosLoses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/santosTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/santos_fc"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/santosLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/santosLogo"
        android:layout_width="82dp"
        android:layout_height="78dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footbuddyLogo"
        app:srcCompat="@drawable/santos" />

    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_to_main_menu"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>