<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/realInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teams.RealInfo"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/footbuddyLogo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/footbuddy_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/footbuddy" />

    <ImageView
        android:id="@+id/realLogo"
        android:layout_width="82dp"
        android:layout_height="78dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footbuddyLogo"
        app:srcCompat="@drawable/real" />


    <TextView
        android:id="@+id/realTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/real_madrid_club_de_f_tbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/realLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/footbuddyLogo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/foundationReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/foundationReal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/realLogo" />

    <TableLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foundationReal"
        app:layout_constraintVertical_bias="0.016">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green2"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/match_history"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="312dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5sp"
                android:text="Matches"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/realMatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:padding="5sp"
                android:text="Wins"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/realWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:padding="5sp"
                android:text="Draws"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/realDraws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="5sp"
                android:text="Loses"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/realLoses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_to_main_menu"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>